Refactor page access counting: remove PageAccessTracker, make Table.get return access count, update all usages and tests. All tests passing.